# aoc

./: .gitignore  CMakeLists.txt  build.sh  download.sh  new.sh  starter.cc  test.sh  util.hh  utilmod.cc
2023/: 1.cc  10.cc  11.cc  12.cc  2.cc  5.cc  6.cc  7.cc  8.cc  9.cc
2024/: 1.cc  10.cc  11.cc  12.cc  13.cc  14.cc  15.cc  16.cc  17.cc  18.cc  19.cc  2.cc  20.cc  21.cc  22.cc  23.cc  24.cc  25.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc  CMakeLists.txt  build.sh  download.sh  test.sh  util.hh
2025/: 1.cc  10.cc  11.cc  12.cc  2.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc  test.cc
